<resources>
    <string name="app_name">Future Home</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="password">Enter password</string>
    <string name="email">Enter your email</string>
    <string name="facebook_app_id">219022403565257</string>
    <string name="fb_login_protocol_scheme">fb219022403565257</string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="default_web_client" translatable="false">794208086129-f37un0lah39839vgeem5321kll9trruf.apps.googleusercontent.com</string>
</resources>